# wic

./: README.md  pyproject.toml
src/bb/: __init__.py  utils.py
src/oe/: __init__.py  bootfiles.py  path.py
src/wic/: cli.py  engine.py  help.py  ksparser.py  misc.py
src/wic/plugins/imager/: direct.py
src/wic/plugins/source/: bootimg_biosplusefi.py
